test/CheckError/Const/ConstPointerTransitivity.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

struct S {
	int* p;
};

void f(const S* value) {
	// CHECK: .loci:11:2: error: template arguments do not satisfy require predicate 'const(int_t) : movable_t' of method 'assign'
	// CHECK: .loci:11:2: note: because: mutator method '__moveto' is required but type is const
	*(value->p) = 1;
}

// CHECK: 1 error generated.
